@startuml

title __MANAGER's Class Diagram__\n

    namespace om.unidates.Unidates.UniDates {
      namespace Manager {
        class com.unidates.Unidates.UniDates.Manager.MatchManager {
            + aggiungiMatch()
            + eliminaMatch()
            + isValidMatch()
            + trovaMatch()
        }
      }
    }
  

    namespace om.unidates.Unidates.UniDates {
      namespace Manager {
        class com.unidates.Unidates.UniDates.Manager.ModerazioneManager {
            + checkAmmonimentiStudente()
            + inviaAmmonimento()
            + inviaSegnalazione()
            + inviaSegnalazioneCommunityManager()
            + inviaSospensione()
            + nascondiFoto()
        }
      }
    }
  

    namespace om.unidates.Unidates.UniDates {
      namespace Manager {
        class com.unidates.Unidates.UniDates.Manager.NotificaManager {
            + eliminaNotificaMatch()
            + generateNotificaMatch()
            + genereateNotificaWarning()
        }
      }
  

    namespace om.unidates.Unidates.UniDates {
      namespace Manager {
        class com.unidates.Unidates.UniDates.Manager.ProfiloManager {
            + aggiungiFotoLista()
            + aggiungiFotoProfilo()
            + eliminaFotoLista()
            + eliminaFotoProfilo()
            + findFotoById()
            + findProfiloById()
            + modificaProfilo()
            + setFotoProfilo()
        }
      }
    }
  

    namespace om.unidates.Unidates.UniDates {
      namespace Manager {
        class com.unidates.Unidates.UniDates.Manager.UserManager {
            - passwordEncoder : PasswordEncoder
            + attivaUtenteRegistrato()
            + bloccaStudente()
            + cambiaPassword()
            + createVerificationToken()
            + deleteUtente()
            + findAllStudenti()
            + getUtenteByVerificationToken()
            + getVerificationToken()
            + isPresent()
            + registrazioneCommunityManager()
            + registrazioneModeratore()
            + registrazioneStudente()
            + sbloccaStudente()
            + trovaStudente()
            + trovaUtente()
        }
      }
    }

  

  com.unidates.Unidates.UniDates.Manager.MatchManager o-- com.unidates.Unidates.UniDates.Repository.MatchRepository : matchRepository
  com.unidates.Unidates.UniDates.Manager.MatchManager o-- com.unidates.Unidates.UniDates.Repository.UtenteRepository : utenteRepository
  com.unidates.Unidates.UniDates.Manager.ModerazioneManager o-- com.unidates.Unidates.UniDates.Repository.AmmonimentiRepository : ammonimentiRepository
  com.unidates.Unidates.UniDates.Manager.ModerazioneManager o-- com.unidates.Unidates.UniDates.Repository.FotoRepository : fotoRepository
  com.unidates.Unidates.UniDates.Manager.ModerazioneManager o-- com.unidates.Unidates.UniDates.Manager.Registrazione.Publisher : publisher
  com.unidates.Unidates.UniDates.Manager.ModerazioneManager o-- com.unidates.Unidates.UniDates.Repository.SegnalazioniRepository : segnalazioniRepository
  com.unidates.Unidates.UniDates.Manager.ModerazioneManager o-- com.unidates.Unidates.UniDates.Repository.SospensioniRepository : sospensioniRepository
  com.unidates.Unidates.UniDates.Manager.ModerazioneManager o-- com.unidates.Unidates.UniDates.Repository.UtenteRepository : utenteRepository
  com.unidates.Unidates.UniDates.Manager.NotificaManager o-- com.unidates.Unidates.UniDates.Repository.AmmonimentiRepository : ammonimentiRepository
  com.unidates.Unidates.UniDates.Manager.NotificaManager o-- com.unidates.Unidates.UniDates.Repository.FotoRepository : fotoRepository
  com.unidates.Unidates.UniDates.Manager.NotificaManager o-- com.unidates.Unidates.UniDates.Repository.NotificaRepository : notificaRepository
  com.unidates.Unidates.UniDates.Manager.NotificaManager o-- com.unidates.Unidates.UniDates.Repository.UtenteRepository : utenteRepository
  com.unidates.Unidates.UniDates.Manager.ProfiloManager o-- com.unidates.Unidates.UniDates.Repository.FotoRepository : fotoRepository
  com.unidates.Unidates.UniDates.Manager.ProfiloManager o-- com.unidates.Unidates.UniDates.Repository.ProfiloRepository : profiloRepository
  com.unidates.Unidates.UniDates.Manager.ProfiloManager o-- com.unidates.Unidates.UniDates.Repository.UtenteRepository : utenteRepository
  com.unidates.Unidates.UniDates.Manager.UserManager o-- com.unidates.Unidates.UniDates.Repository.UtenteRepository : utenteRepository
  com.unidates.Unidates.UniDates.Manager.UserManager o-- com.unidates.Unidates.UniDates.Repository.VerificationTokenRepository : verificationTokenRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
